project/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: todo-app
          image: capscience/todo-app:2.2.3
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: capscience/todo-backend:2.2.2
